--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Open+Sans:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Random Pokemon Picker</title>
   </head>
-  <body style="height: 100%;">
-    <!-- <h1>Random Pokemon Picker</h1>
-    <img src="" class='random-image'>
-    <h2 id="pokemonName" ></h2>=""
-    <ul>
-    </ul> -->
+  <body style="height: 100%">
+
 
     <div
       class="container-fluid h-100 d-flex flex-column"
@@ -25,59 +27,64 @@
         background-size: cover;
       "
     >
-      <h1>Random Pokemon Picker</h1>
+      <img class="mx-5 my-5" src="./img/title.png">
       <div class="row flex-grow-1">
         <div class="col-md-1"></div>
-        <div class="col-md-3 my-auto">
-          <div
-            class="card h-80 bg-light"
-            id="card1"
-            style="border: 13px solid #f8f897"
-          >
-            <div
-              class="card-header pokemonName font-weight-bold text-capitalize border-white border-top border-right border-left border rounded-top"
-              
-            ></div>
-            <img src="" class="card-img-top bg-white random-image" />
-            <div class="card-body bg-light text-dark border-white">
-              <h2 class="card-title pokemonName"></h2>
-              <div class="mb-4 font-weight-bold font-italic">Abilities</div>
-              <ul></ul>
+        <div class="col-md-3 my-auto d-flex justify-content-end">
+          <div class="row">
+            <div class="col-sm">
+       
+              <figure id="card1" class="pokemon-card card-yellow">
+                <div class="card-image-container">
+                  <img src="" class="random-image" />
+                </div>
+
+                <figcaption class="card-caption">
+                  <h1 class="pokemonName"></h1>
+                  <div class="d-flex justify-content-start">
+                    <div class="abilities-title">Abilities:</div>
+                    <div class=""><ul></ul></div>
+                  </div>
+                </figcaption>
+              </figure>
+              <img id="card1-winner" src="./img/winner.png" style="position: relative; z-index: 999999; margin: -300 -200 -300 -175; display:none; ">
             </div>
           </div>
-          <h1 id="card1-battle-result" style="z-index: 50; position: relative;"></h1>
         </div>
         <div class="col d-flex align-items-center justify-content-md-center">
           <div>
-            <button id="btnDrawCards" type="button" class="btn btn-primary">
+            <button id="btnDrawCards" type="button" class="btn btn-lg btn-primary">
               Draw Cards
             </button>
-            <button id="btnBattle" type="button" class="btn btn-danger ml-3">
+            <button id="btnBattle" type="button" class="btn btn-lg btn-danger ml-3">
               BATTLE!
             </button>
           </div>
         </div>
         <div class="col-md-3 my-auto">
-          <div
-            class="card h-80 bg-light"
-            id="card2"
-            style="border: 13px solid #f8f897"
-          >
-            <div
-              class="card-header pokemonName font-weight-bold text-capitalize border-white border rounded-top"
-            ></div>
-            <img src="" class="card-img-top bg-white random-image" />
-            <div class="card-body bg-light text-dark border-white">
-              <h2 class="card-title pokemonName"></h2>
-              <div class="mb-4 font-weight-bold font-italic">Abilities</div>
-              <ul></ul>
+          <div class="row">
+            <div class="col-sm">
+              <figure id="card2" class="pokemon-card card-red">
+                <div class="card-image-container">
+                  <img src="" class="random-image" />
+                </div>
+
+                <figcaption class="card-caption">
+                  <h1 class="pokemonName"></h1>
+                  <div class="d-flex justify-content-start">
+                    <div class="abilities-title">Abilities:</div>
+                    <div class=""><ul></ul></div>
+                  </div>
+                </figcaption>
+              </figure>
+              <img id="card2-winner" src="./img/winner.png" style="position: relative; z-index: 999999; margin: -300 -200 -300 -175; display: none; ">
             </div>
           </div>
-          <h1 id="card2-battle-result" style="z-index: 50; position: relative;"></h1>
         </div>
         <div class="col-md-1"></div>
       </div>
     </div>
   </body>
+
   <script src="random-pokemon.js"></script>
 </html>
